# bmstu-aa

./: .gitignore  latex_table.txt
hw/graphs/: control_graph.graphml  info_graph.graphml  info_history.graphml  op_history.graphml
hw/prog/: main  main.cpp
hw/report/: 00-preamble.tex  01-title.tex  03-theory.tex  04-practice.tex  report.tex
lab1/: prikol.py
lab1/extra/: ternary_vs_branching.md
lab1/graph/: output_graphs.py  table.txt
lab1/prog/: CMakeLists.txt  main.cpp
lab1/report/: report.tex
lab2/graph/: output_graphs.py  table_0.txt  table_1.txt  table_2.txt
lab2/prog/: CMakeLists.txt  main.cpp  results.txt
lab2/scripts/: build.sh  run.sh
lab3/graph/: output_graphs.py  requirements.txt  table_backward.txt  table_forward.txt  table_random.txt
lab3/prog/: CMakeLists.txt  main.cpp
lab4/graph/: graph.py  lengths.txt  threads.txt
lab4/prog/: CMakeLists.txt  main.cpp
lab4/prog/data/: points.txt
lab4/prog/lib/: CMakeLists.txt  algorithms.cpp  algorithms.h  measure.cpp  measure.h  utils.h
lab4/report/: report.tex
lab4/scripts/: run.sh
lab5/: args.txt
lab5/graph/: graph.py  graph_01.py  table.txt  table_files.txt
lab5/prog/: main.cpp
lab5/prog/lib/: CMakeLists.txt  algorithms.cpp  algorithms.h  measure.cpp  measure.h  pipe_request.h  pipeline.cpp  pipeline.h  ts_queue.h  utils.cpp  utils.h
lab5/report/: report.tex
lab6/prog/: ants.py  bruteforce.py  cities.csv  defines.py  main.py  parametrization_class1.txt  parametrization_class2.txt  test.py  utils.py
lab6/report/: report.bcf  report.tex
lab7/prog/: main.cpp
(+143 files in other folders)
